@@ -50,6 +50,7 @@ Python.</li>
 <li><a class="reference" href="developer.html">Developer information</a> -- for Python developers interested in extending
 or fixing twill.</li>
 <li><a class="reference" href="other.html">Other tools and packages</a> -- projects relevant to, or based upon, twill.</li>
+<li><a class="reference" href="problems.html">Known problems</a> -- those problems that are still lurking in the code.</li>
 </ul>
 </blockquote>
 </div>
