@@ -56,6 +56,8 @@ Documentation is available for the following topics:
 
  * `Other tools and packages`_ -- projects relevant to, or based upon, twill.
 
+ * `Known problems`_ -- those problems that are still lurking in the code.
+
 Mailing List
 ------------
 
@@ -114,6 +116,7 @@ Tommi Virtanen, Simon Buenzli, and sureshvv.  Thanks!
 .. _Python API: python-api.html
 .. _Testing Web sites with twill: testing.html
 .. _Other tools and packages: other.html
+.. _Known problems: problems.html
 .. _archive: http://lists.idyll.org/pipermail/twill/
 
 .. _cmd: http://docs.python.org/lib/module-cmd.html
@@ -126,4 +129,3 @@ Tommi Virtanen, Simon Buenzli, and sureshvv.  Thanks!
 .. _pyparsing: http://pyparsing.sourceforge.net/
 
 .. _examples: examples.html
-
