@@ -58,6 +58,13 @@ some starting tips.  Note that it's not written in Python...</p>
 of <a class="reference" href="http://blog.ianbicking.org/twill-in-javascript.html">twill in Javascript</a>.</p>
 <p>(Thanks to Grig Gheorghiu for assembling much of this list!)</p>
 </div>
+<div class="section" id="tools-in-other-languages">
+<h1><a name="tools-in-other-languages">Tools in Other Languages</a></h1>
+<p>As twill is based upon mechanize, so is Perl's <a class="reference" href="http://search.cpan.org/perldoc?WWW::Mechanize::Shell">WWW::Mechanize::Shell</a>
+based upon <a class="reference" href="http://search.cpan.org/perldoc?WWW::Mechanize::Shell">WWW::Mechanize</a>.  There's even an <a class="reference" href="http://www.perl.com/pub/a/2004/06/04/recorder.html">HTTP::Recorder</a>.
+<a class="reference" href="http://webtst.sourceforge.net/documentation.html">WebTst</a> also looks interesting.</p>
+<p>For PHP, <a class="reference" href="http://www.lastcraft.com/web_tester_documentation.php">web_tester</a> looks useful.</p>
+</div>
 </div>
 </body>
 </html>
